tag has been changed according to right alpine version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,32 @@
 services:
   keycloak_db:
-    image: postgres:17
+    image: postgres:18
     expose:
       - 5432
-    container_name: keycloak-db
+    container_name: kek-keycloak-db
     restart: unless-stopped
     environment:
       POSTGRES_DB: kcdb
       POSTGRES_USER: kcdbadm
       POSTGRES_PASSWORD: ${KC_DB_PASSWORD}
     volumes:
-      - keycloak-db-volume:/var/lib/postgresql/data
+      - kek-keycloak-db-volume:/var/lib/postgresql/data
     networks:
-      - docker-bridge-network
+      - kek-docker-bridge-network
 
   keycloak:
-    image: ihavelapki/kc:latest
+    image: ihavelapki/kek-kc:alp3.20.kc24.0.5
     ports:
       - "8080:8080"
-    container_name: keycloak
+    container_name: kek-keycloak
     restart: unless-stopped
     environment:
-      KC_DB: kcdb
       KC_DB_USERNAME: kcdbadm
       KC_DB_URL: "jdbc:postgresql://keycloak_db:5432/kcdb"
       KC_DB_PASSWORD: ${KC_DB_PASSWORD}
-      KEYCLOAK_ADMIN: ${MASTER_USER}
-      KEYCLOAK_ADMIN_PASSWORD: ${MASTER_PASSWORD}
-      KC_LOG_LEVEL: "ERROR"
+      KEYCLOAK_ADMIN: ${KC_MASTER_USER}
+      KEYCLOAK_ADMIN_PASSWORD: ${KC_MASTER_PASSWORD}
+      KC_LOG_LEVEL: "INFO"
       KC_HTTP_RELATIVE_PATH: "/auth"
       KC_HTTPS_CERTIFICATE_FILE: "/opt/rtl/ssl/tls.crt"
       KC_HTTPS_CERTIFICATE_KEY_FILE: "/opt/rtl/ssl/tls.key"
@@ -39,12 +38,12 @@ services:
     depends_on:
       - keycloak_db
     networks:
-      - docker-bridge-network
+      - kek-docker-bridge-network
 
 volumes:
-  keycloak-db-volume:
+  kek-keycloak-db-volume:
     external: true
 
 networks:
-  docker-bridge-network:
+  kek-docker-bridge-network:
     external: true
