--- a/.github/workflows/github-actions-kc.yml
+++ b/.github/workflows/github-actions-kc.yml
@@ -17,9 +17,9 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - name: Docker build
-        run: docker build --build-arg ALPINE_VERSION=3.16 --build-arg KC_VERSION=24.0.5 -t ihavelapki/kek-kc:alp3.16.kc24.0.5 .
+        run: docker build -t ihavelapki/kek-kc:alp3.20.kc24.0.5 .
       - name: docker run
-        run: docker run -d -p 8080:8080 --name kek-kc ihavelapki/kek-kc:alp3.16.kc24.0.5 start-dev
+        run: docker run -d -p 8080:8080 --name kek-kc ihavelapki/kek-kc:alp3.20.kc24.0.5 start-dev
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -31,4 +31,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ihavelapki/kek-kc:alp3.16.kc24.0.5
+          tags: ihavelapki/kek-kc:alp3.20.kc24.0.5
